Added a calendar generator for a given year.

--- a/CaleNdar.vcxproj.filters
+++ b/CaleNdar.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="src\CurrentTime.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\CalendarGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\UI.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\CurrentTime.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CalendarGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
