--- a/CaleNdar.vcxproj
+++ b/CaleNdar.vcxproj
@@ -93,11 +93,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\CalendarGenerator.h" />
     <ClInclude Include="src\CurrentTime.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\UI.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\CalendarGenerator.cpp" />
     <ClCompile Include="src\CurrentTime.cpp" />
     <ClCompile Include="src\EntryPoint.cpp" />
     <ClCompile Include="src\pch.cpp">
