--- a/CaleNdar.vcxproj
+++ b/CaleNdar.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="src\Core.h" />
     <ClInclude Include="src\CurrentTime.h" />
     <ClInclude Include="src\pch.h" />
+    <ClInclude Include="src\Serializer.h" />
     <ClInclude Include="src\UI.h" />
   </ItemGroup>
   <ItemGroup>
@@ -108,6 +109,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\Serializer.cpp" />
     <ClCompile Include="src\UI.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
