--- a/CaleNdar.vcxproj
+++ b/CaleNdar.vcxproj
@@ -95,6 +95,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="src\Core\Core.h" />
     <ClInclude Include="src\Core\pch.h" />
     <ClInclude Include="src\Generators\CalendarGenerator.h" />
@@ -122,6 +123,9 @@
     <ClCompile Include="src\ResourceManager\ResourceManager.cpp" />
     <ClCompile Include="src\Structures\Structures.cpp" />
     <ClCompile Include="src\UI.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
