Final commit for now.

--- a/CaleNdar.vcxproj
+++ b/CaleNdar.vcxproj
@@ -129,6 +129,9 @@
     <ClCompile Include="src\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="data\icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
